--- a/Week_5/Day_2/Challenges/challenge-hard.html
+++ b/Week_5/Day_2/Challenges/challenge-hard.html
@@ -14,3 +14,55 @@
 
 
 	-->
+	<div>
+		<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Hand Bands</h1>
+			<h4>$9.00</h3>
+			<h5>This is so you don't sweat <a href="http://www.amazon.com/Nike-SE0047-Guard-Stay-Black/dp/B007ZDEWWM/ref=sr_1_2?ie=UTF8&qid=1440974990&sr=8-2&keywords=soccer+gear">here</a></h4>
+			<img src="images/1.jpg" >
+		</div>
+			<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Ball Kicker</h1>
+			<h4>$19.00</h3>
+			<h5>This is so you can kick <a href="http://www.amazon.com/SKLZ-Star-Kick-Soccer-Trainer/dp/B000A1FCNY/ref=sr_1_1?ie=UTF8&qid=1440974990&sr=8-1&keywords=soccer+gear&pebp=1440974993713&perid=1VQQERC6A6XHXV8MMQAD">here</a></h4>
+			<img src="images/2.jpg" >
+		</div>
+			<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Super Green Shirt</h1>
+			<h4>$29.00</h3>
+			<h5>This is so you have a shirt <a href="http://www.amazon.com/EliteTek-Padded-Compression-Shirt-CPS14/dp/B00OGVT9ZQ/ref=sr_1_18?ie=UTF8&qid=1440974990&sr=8-18-spons&keywords=soccer+gear">here</a></h4>
+			<img src="images/3.jpg" >
+		</div>
+			<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Practice Cones</h1>
+			<h4>$12.00</h3>
+			<h5>This is so for training <a href="http://www.amazon.com/Plastic-Sports-Training-Carrier-Orange/dp/B008894APQ/ref=sr_1_15?ie=UTF8&qid=1440974990&sr=8-15&keywords=soccer+gear">here</a></h4>
+			<img src="images/4.jpg" >
+		</div>
+	</div>
+	<div>
+		<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Socks</h1>
+			<h4>$5.00</h3>
+			<h5>These are socks right? <a href="http://www.amazon.com/adidas-Metro-Soccer-Cobalt-X-Small/dp/B0072UQ7VC/ref=sr_1_3?ie=UTF8&qid=1440974990&sr=8-3&keywords=soccer+gear">here</a></h4>
+			<img src="images/5.jpg" >
+		</div>
+		<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Little Nets</h1>
+			<h4>$37.00</h3>
+			<h5>Goaaaalllllll <a href="http://www.amazon.com/GOLME-PRO-Pop-Soccer-Goal/dp/B00FKHU4V8/ref=sr_1_17?ie=UTF8&qid=1440974990&sr=8-17-spons&keywords=soccer+gear">here</a></h4>
+			<img src="images/6.jpg" >
+		</div>
+		<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Cool Bookbag</h1>
+			<h4>$40.00</h3>
+			<h5>This is so you can carry stuff <a href="http://www.amazon.com/Diadora-Squadra-Backpack-Royal-Black/dp/B00783L32G/ref=sr_1_11?ie=UTF8&qid=1440974990&sr=8-11&keywords=soccer+gear">here</a></h4>
+			<img src="images/7.jpg" >
+		</div>
+		<div style="width:200px; height:330px; border:1x; border-style:solid; border-color:black; display:inline-block;">
+			<h3>Green Ball</h1>
+			<h4>$10.00</h3>
+			<h5>This is so you can play soccer <a href="http://www.amazon.com/Vizari-Astro-Soccer-Ball-Green/dp/B006NNR81W/ref=sr_1_12?ie=UTF8&qid=1440974990&sr=8-12&keywords=soccer+gear">here</a></h4>
+			<img src="images/8.jpg" >
+		</div>
+	</div>
