--- a/Week_5/Day_2/Challenges/challenge-medium.html
+++ b/Week_5/Day_2/Challenges/challenge-medium.html
@@ -7,7 +7,64 @@
 		- you make use the flag-stars.jpg in your images folder for your stars
 		- you may reference the American-flag.jpg
 		
-		Hint: colspan, rowspan
-
+		Hint: colspan, rowspans
 
 	-->
+	
+	<!DOCTYPE html>
+	<html>
+		<body>
+			<table border="0" cellpadding="0" cellspacing="0">
+				<tr>
+					<td colspan="2" rowspan="10"><img src="images/flag-stars.png" /></td>
+					<td colspan="5">
+						<tr>
+							<td colspan="2" rowspan="1" height="1" width="300" style="background-color:red;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:white;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:red;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:white;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:red;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:white;padding-right:500px;">&nbsp</td>
+						</tr>
+						<tr>
+							<td colspan="2" rowspan="0" height="1" width="300" style="background-color:red;padding-right:500px;">&nbsp</td>
+						</tr>
+					
+					</td>
+
+				</tr>
+				<tr>
+				</tr>
+			</table>
+			<table width="100%" height= "440" cellpadding="0" cellspacing="0">
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:white">&nbsp</td>
+				</tr>
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:red">&nbsp</td>
+				</tr>
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:white">&nbsp</td>
+				</tr>
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:red">&nbsp</td>
+				</tr>
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:white">&nbsp</td>
+				</tr>
+				<tr>
+					<td height ="70" colspan ="5" style="background-color:red">&nbsp</td>
+				</tr>
+			</table>
+		</body>
+	</html>
