--- a/Week_5/Day_2/excercises/excercise-3.html
+++ b/Week_5/Day_2/excercises/excercise-3.html
@@ -8,28 +8,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Movie Page</title>
+	<title><h1>Fast and Furious</h1></title>
 </head>
 
 <body>
 	<!-- Practice Makes Perfect -->
 
 	<!-- 1. create a h1 heading and label it with your favorite movie title -->
-	
+
 	<!-- 2. create an italics h2 heading and label it with your movie's genre and year -->
-
+		<h2><i>
+		Gender:Action 
+		Year: 2000
+		</i></h2>
+			
+		
 	<!-- 3. add a unordered lists of 4 characters/actors from your movie -->
-
+			<ul>
+				<li>characters</li>
+				<ol>
+					<li>anthony</li>
+					<li>Jordan</li>
+					<li>anthony</li>
+				
+				</ol>	
+			</ul>
 	<!-- 4. short paragraph of what's the movie about -->
-
+			<p>Small paragraph of whta's the movie about</p>
 	<!-- 5. short paragraph on why you like this movie  -->
-
+			<p>Becouse is abou cars anf action</p>
 	<!-- let's not forget to link to some helpful resources
 		
 		6. create an order lists with 2 separate links: IMDB and youtube
 
 	-->
-		
+		target=
 	<!-- this page is boring, we need some visuals
 
 		7. let's add a movie poster for our page
