--- a/Week_6/Day_1/challenges/medium/medium.html
+++ b/Week_6/Day_1/challenges/medium/medium.html
@@ -7,3 +7,18 @@
     - set the background color of each section to the color it is labeled
 
 -->
+
+<!DOCTYPE <!DOCTYPE html>
+    <html>
+        
+    <head>
+
+        <link type="text/css" rel="stylesheet" href="medium.css"/>
+
+        <title>Page Title</title>
+	<body>
+		<div class="circle"></div>
+	</body>
+    </head>
+    </html>
+
