--- a/Week_6/Day_2/exercises/exercise_04/index.html
+++ b/Week_6/Day_2/exercises/exercise_04/index.html
@@ -18,5 +18,26 @@
     </head>
     <body>
 
+        <div class="tabbed">
+            <ul class="tabbed__navigation">
+                <li class="tabbed__navigation__item js-tabbed is-active" data-num="1">Celio</li>
+                <li class="tabbed__navigation__item js-tabbed" data-num="2">anthony</li>
+                <li class="tabbed__navigation__item js-tabbed" data-num="3">jordan</li>
+                
+            </ul>
+            <div class="tabbed__content js-tabbed-content">
+            
+            <div class="tabbed__content__item is-active" data-num="1">
+                celio is good
+            </div>
+            <div class="tabbed__content__item" data-num="2">
+                anthony is good
+            </div>
+            <div class="tabbed__content__item" data-num="3">
+                jordan is good
+            </div>
+            </div>
+        </div>
+
     </body>
 </html>
