--- a/Week_5/Day_2/excercises/excercise-2.html
+++ b/Week_5/Day_2/excercises/excercise-2.html
@@ -15,35 +15,35 @@
 	<!-- Headings - Let's practice -->
 
 	<!-- 1. create a h1 heading and label it "Journey" -->
-	
+	<h1> Journey </h1>
 	<!-- 2. create a h2 heading and label it "Don't Stop Believin'"  -->
-
+	<h2> Don't Stop Believin </h2>
 	
 	<!-- Paragraphs - This song needs some lyrics-->
-
+		
 	<!-- 3. format the lyrics below into paragraphs  -->
 
-		Just a small town girl
-		Livin' in a lonely world
-		She took the midnight train
-		Goin' anywhere
-		Just a city boy
-		Born and raised in South Detroit
-		He took the midnight train
-		Goin' anywhere
+		<p><em>Just</em> a small town girl<br />
+		Livin' in a lonely world<br />
+		She took the midnight train<br />
+		Goin' anywhere<br />
+		Just a city boy<br />
+		Born and raised in South Detroit<br />
+		He took the midnight train<br />
+		Goin' anywhere<br />
 
-		A singer in a smokey room
-		The smell of wine and cheap perfume
-		For a smile they can share the night
-		It goes on and on and on and on
+		A singer in a smokey room<br />
+		The smell of wine and cheap perfume<br />
+		For a smile they can share the night<br />
+		It goes on and on and on and on<br />
 
-		Strangers waiting
-		Up and down the boulevard
-		Their shadows searching
-		In the night
-		Streetlight people
-		Livin' just to find emotion
-		Hidin' somewhere in the night
+		<strong>Strangers</strong> waiting<br />
+		Up and down the boulevard<br />
+		Their shadows searching<br />
+		In the night<br />
+		Streetlight people<br />
+		Livin' just to find emotion<br />
+		Hidin' somewhere in the <small>night</small></p><br />
 
 	<!-- 
 
