--- a/Week_5/Day_2/excercises/excercise-4.html
+++ b/Week_5/Day_2/excercises/excercise-4.html
@@ -27,3 +27,41 @@
 	9. below the thead, for each column category fill in your top 3, favorite on top
 
 -->
+<!DOCTYPE <!DOCTYPE html>
+<html>
+	<head>
+		<title>Tables</title>
+	</head>
+	<body>
+		<h1>Im making an awesome</h1>
+		<table border="1">
+			<thead>
+				<tr>
+					<th colspan="3"> Top favs</th>
+				<tr>
+					<th>Movies</th>
+					<th>Food</th>
+					<th>Music</th>
+					</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Fast and Furius</td>
+					<td>Yes</td>
+					<td>Taxi</td>
+				</tr>
+				<tr>
+					<td>Peruvian</td>
+					<td>Chinease</td>
+					<td>Colombiam</td>
+				</tr>
+				<tr>
+					<td>Rap</td>
+					<td>Rap</td>
+					<td>Rap</td>
+				</tr>
+			</tbody>
+		</table>
+	</body>
+
+</html>
