--- a/Week_6/Day_2/exercises/exercise_02/index.html
+++ b/Week_6/Day_2/exercises/exercise_02/index.html
@@ -20,6 +20,8 @@
         <script src="main.js"></script>
     </head>
     <body>
+    <h1 id="title">"hello world"</h1>
+   
     
     </body>
 </html>
